# 2013-mini-smart-vehicles

./: README.md
group-1/: README.TXT
group-5/sources/OpenDaVINCI-msv/msv/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
group-5/sources/OpenDaVINCI-msv/msv/UDP_Server/: CTestTestfile.cmake  Makefile  UDP_Server  cmake_install.cmake  moc_serialport.cxx  moc_udpserver.cxx
group-5/sources/OpenDaVINCI-msv/msv/driver/: CTestTestfile.cmake  Makefile  TestSuiteReport.xml  cmake_install.cmake  driver  driverTestSuite  driverTestSuite.cpp
group-5/sources/OpenDaVINCI-msv/msv/driver/src/: Driver.cpp
group-5/sources/OpenDaVINCI-msv/msv/lanedetector/: CTestTestfile.cmake  Makefile  TestSuiteReport.xml  cmake_install.cmake  lanedetector  lanedetectorTestSuite  lanedetectorTestSuite.cpp
group-5/sources/OpenDaVINCI-msv/msv/lanedetector/src/: #LaneDetector.cpp#  LaneDetector.cpp
group-5/sources/OpenDaVINCI-msv/msv/msv-data/: CTestTestfile.cmake  Makefile  TestSuiteReport.xml  cmake_install.cmake  msv-dataTestSuite  msv-dataTestSuite.cpp
group-5/sources/OpenDaVINCI-msv/msv/msv-data/include/: SteeringData.h
group-5/sources/OpenDaVINCI-msv/msv/msv-data/src/: SteeringData.cpp
group-5/sources/OpenDaVINCI-msv/msv/proxy/: CTestTestfile.cmake  Makefile  TestSuiteReport.xml  cmake_install.cmake  proxy  proxyTestSuite  proxyTestSuite.cpp
group-5/sources/OpenDaVINCI-msv/msv/proxy/src/: Proxy.cpp
group-5/sources/OpenDaVINCI-msv/msv/sensorboard/apps/: MainModule.cpp
group-5/sources/OpenDaVINCI-msv/msv/testsensorboardsender/: CMakeLists.txt
(+141 files in other folders)
